add_executable(marker
	main.cpp
	marker_record_handler.h
	marker_record_handler.cpp)

target_link_libraries(marker
	clangFrontendTool
	clangFrontend
	clangDriver
	clangSerialization
	clangParse
	clangSema
	clangStaticAnalyzerFrontend
	clangStaticAnalyzerCheckers
	clangStaticAnalyzerCore
	clangAnalysis
	clangRewrite
	clangEdit
	clangAST
	clangASTMatchers
	clangLex
	clangBasic
	clangRewriteFrontend
	clangToolingCore
	clangTooling
	clangFormat
	LLVM
)
